Fixed font on cover page

--- a/cover.html
+++ b/cover.html
@@ -4,10 +4,13 @@
     <style>
         body {
             padding-top: 40%;
-            font-family: 'Segoe UI', Tahoma, Helvetica, sans-serif;
+            font-family: "Trebuchet MS"	!important;
             text-align: center;
         }
 
+        p {
+            letter-spacing: 2px !important;  /* https://github.com/wkhtmltopdf/wkhtmltopdf/issues/4068 */
+        }
         h1,
         h2 {
             font-weight: 450;
